<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.laladev.moneyjinn</groupId>
	<artifactId>moneyjinn-server-parent</artifactId>
	<version>1.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>moneyjinn-core</module>
		<module>moneyjinn-hbci-batch</module>
		<module>moneyjinn-model</module>
		<module>moneyjinn-mapstruct-converter</module>
		<module>moneyjinn-service-api</module>
		<module>moneyjinn-service-impl</module>
		<module>moneyjinn-server</module>
	</modules>
	
	<scm>
		<developerConnection>scm:git:https://github.com/OlliL/moneyjinn-server.git</developerConnection>
	  <tag>v1.2.0</tag>
  </scm>

	<properties>
		<moneyjinn-sepa-camt.version>1.0.1</moneyjinn-sepa-camt.version>
	
		<spring.boot.version>3.2.3</spring.boot.version>
		<mybatis.version>3.5.15</mybatis.version>
		<mybatis-spring.version>3.0.3</mybatis-spring.version>
		<commons.io.version>2.15.1</commons.io.version>
		<commons.codec.version>1.16.1</commons.codec.version>
		<apache.tika.version>3.0.0-BETA</apache.tika.version>
		<jjwt.version>0.12.5</jjwt.version>
		<lombok.version>1.18.30</lombok.version>
		<mapstruct.version>1.6.0.Beta1</mapstruct.version>
		<opencsv.version>5.9</opencsv.version>
		<swagger.version>2.2.20</swagger.version>
		<openapi-generator.version>7.3.0</openapi-generator.version>

		<!--for hbci-batch only-->
		<hbci4j-core.version>4.0.0</hbci4j-core.version>

		<!-- Maven Plugins -->
		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
		<maven-release-plugin.version>3.0.1</maven-release-plugin.version>
		<maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
		<maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
		<build-helper-maven-plugin.version>3.5.0</build-helper-maven-plugin.version>
		<versions-maven-plugin.version>2.16.2</versions-maven-plugin.version>

		<!-- Test Scope -->
		<junit.version>5.10.2</junit.version>
		<mockito.version>5.11.0</mockito.version>
		<juniversalchardet.version>2.4.0</juniversalchardet.version>

		<java.version>17</java.version>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
    				<groupId>org.junit</groupId>
    				<artifactId>junit-bom</artifactId>
    				<version>${junit.version}</version>
    				<type>pom</type>
				<scope>import</scope>
			</dependency>
			
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-sepa-camt</artifactId>
				<version>${moneyjinn-sepa-camt.version}</version>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-mapstruct-converter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-impl</artifactId>
				<version>${project.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>com.opencsv</groupId>
				<artifactId>opencsv</artifactId>
				<version>${opencsv.version}</version>
				<exclusions>
					<exclusion>
						<groupId>commons-logging</groupId>
						<artifactId>commons-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>${commons.codec.version}</version>
			</dependency>
			<dependency>
				<groupId>jakarta.inject</groupId>
				<artifactId>jakarta.inject-api</artifactId>
				<version>2.0.1</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis-spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tika</groupId>
				<artifactId>tika-core</artifactId>
				<version>${apache.tika.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jjwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jjwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>${lombok.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-core</artifactId>
				<version>${swagger.version}</version>
			</dependency>

			<dependency>
				<groupId>com.github.hbci4j</groupId>
				<artifactId>hbci4j-core</artifactId>
				<version>${hbci4j-core.version}</version>
			</dependency>

			<!-- TEST SCOPE -->
			<dependency>
    				<groupId>org.mockito</groupId>
    				<artifactId>mockito-core</artifactId>
    				<version>${mockito.version}</version>
    				<scope>test</scope>
			</dependency>
			<dependency>
    				<groupId>org.mockito</groupId>
    				<artifactId>mockito-junit-jupiter</artifactId>
    				<version>${mockito.version}</version>
    				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.albfernandez</groupId>
				<artifactId>juniversalchardet</artifactId>
				<version>${juniversalchardet.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${spring.boot.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi-generator.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${maven-jar-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>${maven-release-plugin.version}</version>
			</plugin>
			<plugin>
  				<groupId>org.codehaus.mojo</groupId>
  				<artifactId>versions-maven-plugin</artifactId>
	  			<version>${versions-maven-plugin.version}</version>
			</plugin>
			<plugin>
   				<groupId>org.codehaus.mojo</groupId>
    			<artifactId>build-helper-maven-plugin</artifactId>
	  			<version>${build-helper-maven-plugin.version}</version>
    		</plugin>
		</plugins>
	</build>
</project>